Added checks for padding when calculating ActiveBlock size and early termination while unpacking.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
         "set": "cpp",
         "span": "cpp",
         "xlocbuf": "cpp",
-        "xlocmes": "cpp"
+        "xlocmes": "cpp",
+        "unordered_set": "cpp"
     }
 }
